--- a/code_error_example/pom.xml
+++ b/code_error_example/pom.xml
@@ -51,6 +51,11 @@
             <artifactId>jedis</artifactId>
             <version>2.9.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson-spring-boot-starter</artifactId>
+            <version>3.11.5</version>
+        </dependency>
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
