--- a/code_error_example/src/main/resources/application.yaml
+++ b/code_error_example/src/main/resources/application.yaml
@@ -13,6 +13,8 @@ spring:
       hibernate:
         naming:
           physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
+  redis:
+    host: 192.168.83.128
 
 
 ribbon:
