--- a/code_error_example/src/main/resources/application.yaml
+++ b/code_error_example/src/main/resources/application.yaml
@@ -6,7 +6,6 @@ spring:
     #    url: jdbc:mysql://10.86.36.26:3306/fantasybaby_dev_error?characterEncoding=UTF-8&useSSL=false&rewriteBatchedStatements=true
     username: root
     password: root123
-    platform: mysql
     maximum-pool-size: 100
     jpa:
       open-in-view: false
@@ -15,6 +14,9 @@ spring:
           physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
   redis:
     host: 192.168.83.128
+  sql:
+    init:
+      platform: mysql
 
 
 ribbon:
