--- a/code_error_example/pom.xml
+++ b/code_error_example/pom.xml
@@ -65,7 +65,11 @@
             <artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
         </dependency>-->
 
-
+        <dependency>
+            <groupId>org.apache.groovy</groupId>
+            <artifactId>groovy-all</artifactId>
+            <type>pom</type>
+        </dependency>
     </dependencies>
 
 </project>
