--- a/pom.xml
+++ b/pom.xml
@@ -101,7 +101,12 @@
                 <artifactId>httpclient</artifactId>
                 <version>4.5.12</version>
             </dependency>
-
+            <dependency>
+                <groupId>org.apache.groovy</groupId>
+                <artifactId>groovy-all</artifactId>
+                <version>4.0.0</version>
+                <type>pom</type>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
