--- a/code_error_example/pom.xml
+++ b/code_error_example/pom.xml
@@ -71,5 +71,17 @@
             <type>pom</type>
         </dependency>
     </dependencies>
-
+<build>
+    <resources>
+        <resource>
+            <directory>src/main/java</directory>
+            <includes>
+                <include>**/*.properties</include>
+                <include>**/*.xml</include>
+                <include>**/*.txt</include>
+            </includes>
+            <filtering>false</filtering>
+        </resource>
+    </resources>
+</build>
 </project>
