--- a/code_error_example/pom.xml
+++ b/code_error_example/pom.xml
@@ -56,6 +56,10 @@
             <artifactId>redisson-spring-boot-starter</artifactId>
             <version>3.11.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.cloud</groupId>
+            <artifactId>spring-cloud-starter-openfeign</artifactId>
+        </dependency>
         <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-openfeign</artifactId>
