--- a/code_error_example/src/main/java/com/fantasybaby/dee/code/spring/aopfeign/feign.properties
+++ b/code_error_example/src/main/java/com/fantasybaby/dee/code/spring/aopfeign/feign.properties
@@ -1,2 +1,2 @@
-client.ribbon.listOfServers=localhost:45678
-#spring.aop.proxy-target-class=false
+client.ribbon.listOfServers=localhost:7777
+spring.aop.proxy-target-class=false
