--- a/pom.xml
+++ b/pom.xml
@@ -4,9 +4,9 @@
     <parent>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
-        <version>2.6.1</version>
+<!--        <version>2.6.1</version>-->
 
-        <!--<version>2.3.1.RELEASE</version>-->
+        <version>2.3.1.RELEASE</version>
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -18,9 +18,9 @@
     <packaging>pom</packaging>
     <properties>
         <java.version>1.8</java.version>
-        <spring.cloud-version>2021.0.0</spring.cloud-version>
+<!--        <spring.cloud-version>2021.0.0</spring.cloud-version>-->
         <!--        <spring.cloud-version>2022.0.0-M1</spring.cloud-version>-->
-        <!--        <spring.cloud-version>Hoxton.SR8</spring.cloud-version>-->
+                <spring.cloud-version>Hoxton.SR8</spring.cloud-version>
     </properties>
     <modules>
         <module>dev_design_example</module>
@@ -32,10 +32,10 @@
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
         </dependency>
-        <dependency>
+        <!--<dependency>
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-bootstrap</artifactId>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>javax.validation</groupId>
             <artifactId>validation-api</artifactId>
