--- a/dev_design_example/src/main/resources/application.yaml
+++ b/dev_design_example/src/main/resources/application.yaml
@@ -1,11 +1,14 @@
 spring:
   application:
     name: dev_error_design
+  redis:
+    host: 192.168.1.3
 server:
   port: 7778
   servlet:
     encoding:
       force: true
       charset: UTF-8
+
 logging:
   config: classpath:logback-spring.xml
