--- a/pom.xml
+++ b/pom.xml
@@ -114,6 +114,11 @@
                 <artifactId>dev-mistakes-common</artifactId>
                 <version>0.0.1-SNAPSHOT</version>
             </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>3.11.5</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
