--- a/dev_design_example/pom.xml
+++ b/dev_design_example/pom.xml
@@ -25,6 +25,10 @@
     <groupId>org.redisson</groupId>
     <artifactId>redisson-spring-boot-starter</artifactId>
   </dependency>
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-actuator</artifactId>
+  </dependency>
 </dependencies>
   <build>
     <resources>
