--- a/dev_design_example/src/main/resources/application.yaml
+++ b/dev_design_example/src/main/resources/application.yaml
@@ -3,6 +3,11 @@ spring:
     name: dev_error_design
   redis:
     host: 192.168.1.3
+  rabbitmq:
+    host: 192.168.1.3
+    port: 5672
+    username: fantasybaby
+    password: fantasybaby
 server:
   port: 7778
   servlet:
