--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,16 @@
                 <artifactId>redisson-spring-boot-starter</artifactId>
                 <version>3.11.5</version>
             </dependency>
+            <dependency>
+                <groupId>org.springframework.data</groupId>
+                <artifactId>spring-data-elasticsearch</artifactId>
+                <version>4.4.0</version>
+            </dependency>
+            <dependency>
+                <groupId>com.influxdb</groupId>
+                <artifactId>influxdb-client-java</artifactId>
+                <version>3.1.0</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <build>
