--- a/dev_design_security/pom.xml
+++ b/dev_design_security/pom.xml
@@ -17,6 +17,23 @@
     <artifactId>fluent-hc</artifactId>
     <version>4.5.12</version>
   </dependency>
+  <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+  </dependency>
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+  </dependency>
+  <dependency>
+    <groupId>mysql</groupId>
+    <artifactId>mysql-connector-java</artifactId>
+  </dependency>
+  <dependency>
+    <groupId>org.mybatis.spring.boot</groupId>
+    <artifactId>mybatis-spring-boot-starter</artifactId>
+    <version>2.1.1</version>
+  </dependency>
 </dependencies>
   <build>
     <plugins>
