--- a/dev_design_security/pom.xml
+++ b/dev_design_security/pom.xml
@@ -34,6 +34,21 @@
     <artifactId>mybatis-spring-boot-starter</artifactId>
     <version>2.1.1</version>
   </dependency>
+  <dependency>
+    <groupId>org.springframework.security</groupId>
+    <artifactId>spring-security-crypto</artifactId>
+    <version>5.6.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.apache.commons</groupId>
+    <artifactId>commons-lang3</artifactId>
+    <version>3.12.0</version>
+  </dependency>
+  <dependency>
+    <groupId>org.springframework.data</groupId>
+    <artifactId>spring-data-redis</artifactId>
+    <version>2.5.3</version>
+  </dependency>
 </dependencies>
   <build>
     <plugins>
