--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
         <module>dev_design_example</module>
         <module>code_error_example</module>
         <module>dev_design_security</module>
+        <module>dev_not_only_error</module>
       
     </modules>
     <dependencies>
