test oom and arthas

--- a/dev_not_only_error/pom.xml
+++ b/dev_not_only_error/pom.xml
@@ -12,7 +12,14 @@
   <name>other-knowledge</name>
   
 <dependencies>
-
+  <dependency>
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-jdbc</artifactId>
+  </dependency>
+  <dependency>
+    <groupId>org.springframework.boot</groupId>
+    <artifactId>spring-boot-starter-data-jpa</artifactId>
+  </dependency>
 </dependencies>
   <build>
     <plugins>
